    * Added possibility to make one legend use multiple plotareas
    * Added grouping to drivers (currently only fully supported by SVG driver)
    * Added axis padding (padding inside the plotarea)
    * Added Image_Graph_Axis::setFixedSize() to allow for alignment of axis on different plotareas when in a layout
    * Implemented simple shadows (and removed shadow images from distribution)
    * Fixed bug #3346 "double as data"
    * Fixed a problem with normal multi-data bar charts not displaying expected bar width
    * Fixed problem with legends when overlayed    
    * Fixed axis not displaying labels after resetting driver
    * Fixed problem in SVG driver with vertical texts
    * Fixed a problem with line axis marker on a secondary y-axis displaying vertically instead of horizontally
    * Changed the way coordinates are calculated when adding titles to non-layout objects
    * Changed which changes API causing minor BC breaks
        - Renamed Image_Graph_Plot_Bar::barWidth() to Image_Graph_Plot_Bar::setBarWidth()
        - Renamed Image_Graph_Plot_Bar::spacing() to Image_Graph_Plot_Bar::setSpacing()
        - Removed Image_Graph_Layout_Plotarea, it being completely obsolete with introduction of Image_Graph_Axis::setTitle()
    * Updated header comment blocks to conform to new standards as specified by RFC
    * Performance optimizations

Version 0.3.0-dev4 [2005-Jan-28] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Fixed problem with logarithmic axis causing an infinite loop

Version 0.3.0-dev3 [2005-Jan-27] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added possibility to invert axis direction, fx. minimum at top or bottom
    * Added methods to handle axis label customization (Image_Graph_Axis::setLabelOption() and Image_Graph_Axis::setLabelOptions())
    * Minor change to the way GD driver(s) calculate height (so that fx. x-axis labels appear printed on the same baseline)
    * Fixed axis so that forceMinimum() works with axis intersection